# elodrinks-api

./: main.py  pyproject.toml  readme.md  vercel.json
src/models/: BudgetModels.py  MailModels.py  PaymentModels.py
src/routes/: budget.py
src/routes/payment/: create.py
src/services/: mp_api.py
src/services/budget/: __init__.py  create.py  read.py
src/services/email/: __init__.py  sendMail.py
src/services/mongo/: __init__.py  mongo.py
src/services/payment/: __init__.py  create.py  mercadopago.py
tests/: conftest.py  test_budget_models.py  test_budget_rotes.py  test_budget_services.py  test_mail_models.py  test_mail_services.py  test_mongo_services.py  test_payment_model.py  test_payment_services.py
