[project]
name = "elodrinks-api"
version = "1.0"
description = ""
authors = [
    {name = "Francisco Guimarães",email = "franciscop.guimaraes04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.11.3,<5.0.0)",
    "bson (>=0.5.10,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
