[project]
name = "elodrinks-api"
version = "1.0"
description = ""
authors = [
    {name = "Francisco Guimarães",email = "franciscop.guimaraes04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.11.3,<5.0.0)",
    "bson (>=0.5.10,<0.6.0)",
    "mercadopago (>=2.3.0,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"